--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npx webpack-dev-server --mode development",
+    "build": "webpack --mode production",
     "dist": "npx webpack --mode production --progress=profile",
     "lint": "eslint ."
   },
